2006.07.19: David Nichols
        * fixed a bug in HTTPClient::head(), was erroneously trying to read the
	  message body
	* started adding qt4 module

2006.07.17: David Nichols
	* implemented %s in queries to allow for direct string insertion
	  (without any escaping) to facilitate support for table name prefixes,
	  etc
	* updated library version to 4-0-1
 	* updated version number to 0.7.0
	* updated module API to 0.4 (need to add compatibility info)
	* updated spec file for library version 3.1.0
	* fixed a bug where null values could be inserted into the parse tree
	  causing a core dump (i.e.: "hello"[1] - this is not yet legal, support
	  for this will be implemented in this release, but before this bug fix
	  a core dump would result)
	* implemented string position dereferences with the list dereference 
	  operator "[]"
	* implemented File::open2() method that throws an exception if the file
	  cannot be opened
	* updated documentation to reflect 0.7.0 version number

*** v0.6.2 RELEASE *** 

2006.06.22: David Nichols
	* updated qore's system() to use system() if ";" is found in the string
	  (added ';' to the shell meta-character list)

2006.06.14: David Nichols
	* minor documentation corrections

2006.06.12: David Nichols
	* added -D_RWSTD_MULTI_THREAD to HP-UX compiles with aCC to fix 
	  threading issues with the STL

2006.06.11: David Nichols
	* fixed configure for 64-bit editions of Sybase

2006.06.09: David Nichols
	* fixed += and -= cases when the left-hand-side is NOTHING to take the
	  type of the right-hand-side (i.e. my $str += "hello" will now work as
	  expected (before would prodice $str = 0)
	* implemented trim() function, accepting optional string designating
	  characters to trim from the front and back of the string.  Default 
	  characters to trim are ' ', '\n', '\r', '\t', '\v' (vertical tab, 
	  ASCII 11), and '\0' (null character) - same as PHP's trim() function
	* trim() and chomp() accept references to modify the variable reference